# SDLApplication

./: CMakeLists.txt  Makefile  README
include/: cActivity.h  cAnimation.h  cApp.h  cEvent.h  cSurface.h  webcam.h
src/: cActivity.cpp  cActivity.h  cAnimation.cpp  cApp.cpp  cApp.h  cEntity.cpp  cEntity.h  cEvent.cpp  cSurface.cpp  cSurface.h  webcam.c
